packages/typ/tests/fixtures/diagnostics/0358_external_identity_use_mismatch_03.ml.infer.expected
File "0358_external_identity_use_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0358_external_identity_use_mismatch_03 is not a valid module name.

File "0358_external_identity_use_mismatch_03.ml", line 2, characters 17-21:
2 | let _ = id_gamma true
                     ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
